--- a/src/app/components/detail-product/detail-product.component.html
+++ b/src/app/components/detail-product/detail-product.component.html
@@ -1,163 +1,207 @@
 <app-header></app-header>
+<p-toast position="center"></p-toast>
 <section class="breadcrumb-section set-bg" style="background-image:url('assets/img/breadcrumb.jpg');">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <div class="breadcrumb__text">
-                    <h2>{{product?.name}}</h2>
-                </div>
-            </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <div class="breadcrumb__text">
+          <h2>{{product?.name}}</h2>
         </div>
+      </div>
     </div>
+  </div>
 </section>
 <!-- Breadcrumb Section End -->
 
 <!-- Product Details Section Begin -->
 <section class="product-details spad">
-    <div class="container">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 col-md-6">
+        <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div *ngFor="let image of product?.product_images; let i = index" class="carousel-item"
+              [ngClass]="{'active': i === currentImageIndex}">
+              <div class="square-image">
+                <img [src]="image.image_url" class="product-image" alt="Product Image">
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev"
+            (click)="previousImage()">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next"
+            (click)="nextImage()">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          </button>
+        </div>
         <div class="row">
-            <div class="col-lg-6 col-md-6">
-                <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
-                  <div class="carousel-inner">
-                    <div *ngFor="let image of product?.product_images; let i = index" 
-                         class="carousel-item" [ngClass]="{'active': i === currentImageIndex}">
-                      <div class="square-image">
-                        <img [src]="image.image_url" class="product-image" alt="Product Image">
+          <div class="thumbnail-container">
+            <div *ngFor="let image of product?.product_images; let i = index" class="thumbnail-item"
+              [ngClass]="{'active': i === currentImageIndex}" (click)="thumbnailClick(i)">
+              <img [src]="image.image_url" class="thumbnail-image" alt="Thumbnail Image">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6 col-md-6">
+        <div class="product__details__text">
+          <h3>{{product?.name}}</h3>
+          <div class="product__details__rating">
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star-half-o"></i>
+            <span>(18 reviews)</span>
+          </div>
+          <div class="product__details__price">{{product?.price | number:'1.0-0'}}<sup>vnđ</sup></div>
+          <p>{{product?.description}}</p>
+          <div class="product__details__quantity">
+            <div class="quantity">
+              <span class="qtybtn" (click)="decreaseQuantity()">-</span>
+              <div class="pro-qty">
+                <input type="text" [value]="quantity">
+              </div>
+              <span class="qtybtn" (click)="increaseQuantity()"> + </span>
+            </div>
+          </div>
+          <a (click)="addToCart()" class="primary-btn">ADD TO CARD</a>
+          <a (click)="addToFavourite(productId)" class="heart-icon"><span class="icon_heart_alt"></span></a>
+          <a (click)="buyNow()" class="primary-btn">BUY</a>
+
+          <ul>
+            <li><b>Tổng tiền:</b><span>{{ getTotalPrice() | number:'1.0-0' }} <sup>vnđ</sup></span></li>
+            <li><b>Weight</b> <span>{{product?.weight}}</span></li>
+            <li><b>Share on</b>
+              <div class="share">
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-instagram"></i></a>
+                <a href="#"><i class="fa fa-pinterest"></i></a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-lg-12">
+        <div class="product__details__tab">
+          <ul class="nav nav-tabs" role="tablist">
+            <li class="nav-item">
+              <a class="nav-link active" data-toggle="tab" href="#tabs-3" role="tab" aria-selected="true">Comments</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" data-toggle="tab" href="#tabs-1" role="tab" aria-selected="false">Information</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" data-toggle="tab" href="#tabs-2" role="tab" aria-selected="false">Reviews
+                <span>(1)</span></a>
+            </li>
+          </ul>
+          <div class="tab-content">
+            <div class="tab-pane active" id="tabs-3" role="tabpanel">
+              <div class="product__details__tab__desc">
+                <div class="card">
+                  <div class="card-body" *ngFor="let comment of comments">
+                    <div class="d-flex flex-start align-items-center">
+                      <div>
+                        <h6 class="fw-bold text-primary mb-1">{{comment.user.fullname}}</h6>
+                        <p class="text-muted small mb-0">
+                          {{comment.updateAt}}
+                        </p>
                       </div>
                     </div>
+
+                    <p class="mt-3 mb-4 pb-2">
+                      {{comment.content}}
+                    </p>
+
+                    <div class="small d-flex justify-content-start">
+                      <a href="#!" class="d-flex align-items-center me-3">
+                        <i class="far fa-thumbs-up me-2"></i>
+                        <p class="mb-0">Like</p>
+                      </a>
+                      <a href="#!" class="d-flex align-items-center me-3">
+                        <i class="far fa-comment-dots me-2"></i>
+                        <p class="mb-0">Comment</p>
+                      </a>
+                      <a href="#!" class="d-flex align-items-center me-3">
+                        <i class="fas fa-share me-2"></i>
+                        <p class="mb-0">Share</p>
+                      </a>
+                    </div>
                   </div>
-                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" 
-                          data-bs-slide="prev" (click)="previousImage()">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  </button>
-                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" 
-                          data-bs-slide="next" (click)="nextImage()">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  </button>
-                </div>
-                <div class="row">
-                  <div class="thumbnail-container">
-                    <div *ngFor="let image of product?.product_images; let i = index" 
-                         class="thumbnail-item" 
-                         [ngClass]="{'active': i === currentImageIndex}"
-                         (click)="thumbnailClick(i)">
-                      <img [src]="image.image_url" class="thumbnail-image" alt="Thumbnail Image">
+                  <div class="card-footer py-3 border-0" style="background-color: #f8f9fa;">
+                    <div class="d-flex flex-start w-100">
+                      <div data-mdb-input-init class="form-outline w-100">
+                        <textarea class="form-control" id="textAreaExample" rows="4" style="background: #fff;"
+                          [(ngModel)]="message" name="message"></textarea>
+                        <label class="form-label" for="textAreaExample">Message</label>
+                      </div>
+                    </div>
+                    <div class="float-end mt-2 pt-1">
+                      <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-sm"
+                        (click)="postComment()">Post comment</button>
+
                     </div>
                   </div>
                 </div>
               </div>
-            <div class="col-lg-6 col-md-6">
-                <div class="product__details__text">
-                    <h3>{{product?.name}}</h3>
-                    <div class="product__details__rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star-half-o"></i>
-                        <span>(18 reviews)</span>
-                    </div>
-                    <div class="product__details__price">{{product?.price | number:'1.0-0'}}<sup>vnđ</sup></div>
-                    <p>{{product?.description}}</p>
-                    <div class="product__details__quantity">
-                        <div class="quantity">
-                            <span class="qtybtn" (click)="decreaseQuantity()">-</span>
-                            <div class="pro-qty">
-                                <input type="text" [value]="quantity">
-                            </div>
-                            <span class="qtybtn" (click)="increaseQuantity()"> + </span>
-                        </div>
-                    </div>
-                    <a (click)="addToCart()" class="primary-btn">ADD TO CARD</a>
-                    <a href="#" class="heart-icon"><span class="icon_heart_alt"></span></a>
-                    <a (click)="buyNow()" class="primary-btn">BUY</a>
-                    
-                    <ul>
-                        <li><b>Tổng tiền:</b><span>{{ getTotalPrice() | number:'1.0-0' }} <sup>vnđ</sup></span></li>
-                        <li><b>Weight</b> <span>{{product?.weight}}</span></li>
-                        <li><b>Share on</b>
-                            <div class="share">
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-instagram"></i></a>
-                                <a href="#"><i class="fa fa-pinterest"></i></a>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
             </div>
-            <div class="col-lg-12">
-                <div class="product__details__tab">
-                    <ul class="nav nav-tabs" role="tablist">
-                        <li class="nav-item">
-                            <a class="nav-link active" data-toggle="tab" href="#tabs-1" role="tab"
-                                aria-selected="true">Description</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" data-toggle="tab" href="#tabs-2" role="tab"
-                                aria-selected="false">Information</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" data-toggle="tab" href="#tabs-3" role="tab"
-                                aria-selected="false">Reviews <span>(1)</span></a>
-                        </li>
-                    </ul>
-                    <div class="tab-content">
-                        <div class="tab-pane active" id="tabs-1" role="tabpanel">
-                            <div class="product__details__tab__desc">
-                                <h6>Thông tin sản phẩm</h6>
-                                <p>{{product?.description}}</p>
-                            </div>
-                        </div>
-                        <div class="tab-pane" id="tabs-2" role="tabpanel">
-                            <div class="product__details__tab__desc">
-                                <h6>Chi tiết sản phẩm</h6>
-                                <p>{{product?.description}}
-                            </div>
-                        </div>
-                        <div class="tab-pane" id="tabs-3" role="tabpanel">
-                            <div class="product__details__tab__desc">
-                                <h6>Đánh giá</h6>
-                                <p>{{product?.description}}</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="tab-pane " id="tabs-1" role="tabpanel">
+              <div class="product__details__tab__desc">
+                <h6>Thông tin sản phẩm</h6>
+                <p>{{product?.description}}</p>
+              </div>
             </div>
+            <div class="tab-pane" id="tabs-2" role="tabpanel">
+              <div class="product__details__tab__desc">
+                <h6>Chi tiết sản phẩm</h6>
+                <p>{{product?.description}}
+              </div>
+            </div>
+            <!-- Comment section -->
+            <!-- Comment section End-->
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 </section>
+
 <!-- Product Details Section End -->
 
 <!-- Related Product Section Begin -->
 <section class="related-product">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="section-title related__product__title">
-                    <h2>Related Product</h2>
-                </div>
-            </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="section-title related__product__title">
+          <h2>Related Product</h2>
         </div>
-        <div class="row">
-            <div class="col-lg-3 col-md-4 col-sm-6 mix oranges fresh-meat" *ngFor="let product of products">
-                <div class="featured__item">
-                    <div class="featured__item__pic set-bg">
-                        <img [src]="product.url" (click)="onProductClick(product.id)" alt="Product Image" class="product-image">
-                        <ul class="featured__item__pic__hover">
-                            <li><a title="Thêm vào yêu thích"><i class="fa fa-heart"></i></a></li>
-                            <li><a (click)="addToCartP(product.id)" title="Thêm vào giỏ hàng"><i class="fa fa-shopping-cart"></i></a></li>
-                            <li><a (click)="buyNowP(product.id)" title="Mua ngay"><i class="fas fa-shopping-bag"></i></a></li>
-                        </ul>
-                    </div>
-                    <div class="featured__item__text">
-                        <h6>{{product.name}}</h6>
-                        <h5>{{product.price| number:'1.0-0'}}<sup>đ</sup></h5>
-                    </div>
-                </div>
-            </div>
-        </div>
+      </div>
     </div>
+    <div class="row">
+      <div class="col-lg-3 col-md-4 col-sm-6 mix oranges fresh-meat" *ngFor="let product of products">
+        <div class="featured__item">
+          <div class="featured__item__pic set-bg">
+            <img [src]="product.url" (click)="onProductClick(product.id)" alt="Product Image" class="product-image">
+            <ul class="featured__item__pic__hover">
+              <li><a title="Thêm vào yêu thích"><i class="fa fa-heart"></i></a></li>
+              <li><a (click)="addToCartP(product.id)" title="Thêm vào giỏ hàng"><i class="fa fa-shopping-cart"></i></a>
+              </li>
+              <li><a (click)="buyNowP(product.id)" title="Mua ngay"><i class="fas fa-shopping-bag"></i></a></li>
+            </ul>
+          </div>
+          <div class="featured__item__text">
+            <h6>{{product.name}}</h6>
+            <h5>{{product.price| number:'1.0-0'}}<sup>đ</sup></h5>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
 <app-footer></app-footer>
 <!-- Related Product Section End -->
